assets/scss/main.scss
@import "node_modules/@patternfly/patternfly/sass-utilities/all.scss";

$pf-global--font-path: "./{{ .Site.BaseURL }}/fonts";
$fa-font-path: $pf-global--font-path + "/webfonts";

@import "node_modules/@patternfly/patternfly/patternfly.scss";
@import "node_modules/@patternfly/patternfly/patternfly-addons.scss";

.pf-x-m-no-decoration {
  text-decoration: none !important;
}

.pf-x-u-text-center {
  text-align: center;
}

.highlight {
  @extend .pf-u-my-md, .pf-c-card, .pf-m-flat;

  > pre {
    @extend .pf-u-p-md;

    overflow-x: auto;
  }
}

.pf-x-c-article__header {
  max-height: 35rem;
  object-fit: cover;
}

.pf-c-avatar--main {
  width: 250px;
  height: 100%;
  object-fit: cover;
}

.pf-x-person__header {
  max-width: 1024px;
  margin: 3rem auto;
  margin-bottom: 1.5rem !important;

  &,
  .pf-c-dropdown__toggle {
    color: var(--pf-global--Color--light-100);
  }
}

.pf-x-c-avatar__figcaption {
  margin-left: auto;
  transform: translateY(50%);
}

.pf-c-card--overlay {
  transform: translateY(50%);
  max-width: 825px;
  margin: 0 auto;
}

.lastcommit__user__url > img {
  margin-bottom: -0.4rem;
}

.pf-c-code-block__actions--info {
  margin-left: 0;
  width: 100%;
  justify-content: space-between;
}

.pf-c-code-block--transparent {
  background: transparent;
}

.pf-x-octocat {
  width: 100px;
}

.pf-x-u-blur {
  backdrop-filter: blur(7.5px) brightness(0.4);
}

.pf-c-page--background {
  background: url(https://source.unsplash.com/featured?space);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.pf-c-card__header-main__img {
  width: 100%;
  height: 300px;
  object-fit: cover;
}

.pf-c-card__header-main--fluid {
  width: 100%;
}

.pf-x-commitwrapper {
  z-index: 10;
}

.pf-l-grid--max-width {
  width: 1128px;
  max-width: 100%;
  margin: 0 auto;
}

.pf-c-page__header--max-width {
  display: flex;
  align-items: center;
  justify-content: center;
}

.pf-c-page__header-tools--max-width {
  margin: 0 !important;
  width: 100%;
  max-width: 1128px;
  display: flex;
  align-items: center;
  justify-content: end;
}

.pf-c-page__header--overlay {
  background: transparent;
  position: fixed;
  left: 0;
  right: 0;
  height: 100px;
}

.pf-c-page__main--with-overlay {
  padding-top: 100px;
}

.pf-x-u-nowrap {
  white-space: nowrap;
  overflow-x: auto;
}

